[gd_scene load_steps=12 format=3 uid="uid://woab52xneocy"]

[ext_resource type="Texture2D" uid="uid://dfcqmg6spbjxi" path="res://Textures/Heads/Head.png" id="1_3advf"]
[ext_resource type="Script" path="res://Entities/player.gd" id="1_jpqqa"]
[ext_resource type="Texture2D" uid="uid://6sd2w1o7rkqc" path="res://Textures/Bodies/Body.png" id="1_s27gf"]
[ext_resource type="Texture2D" uid="uid://bltrwwogq83xv" path="res://Textures/Wands/Wand.png" id="2_5gsqr"]
[ext_resource type="AudioStream" uid="uid://dqttysrej4stb" path="res://Audio/Spawn.ogg" id="5_8r7e4"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5fj38"]
radius = 23.0
height = 82.0

[sub_resource type="Animation" id="Animation_yht5o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton/ArmRight:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(45, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton/ArmLeft:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-45, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton/Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skeleton/Wand:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(42, -11)]
}

[sub_resource type="Animation" id="Animation_bht8e"]
resource_name = "Stand"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton/ArmRight:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(45, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton/ArmLeft:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-45, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton/Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skeleton/Wand:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(42, -11)]
}

[sub_resource type="Animation" id="Animation_henid"]
resource_name = "Walk"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton/Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton/ArmRight:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(45, 5), Vector2(45, -4), Vector2(45, 5), Vector2(45, 15), Vector2(45, 5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton/ArmLeft:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-45, 0), Vector2(-45, 10), Vector2(-45, 0), Vector2(-45, -10), Vector2(-45, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skeleton/Wand:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(42, -11), Vector2(42, -21), Vector2(42, -11), Vector2(42, -1), Vector2(42, -11)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_megq1"]
_data = {
"RESET": SubResource("Animation_yht5o"),
"Stand": SubResource("Animation_bht8e"),
"Walk": SubResource("Animation_henid")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_47lbi"]
radius = 68.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 1
collision_layer = 3
collision_mask = 3
motion_mode = 1
script = ExtResource("1_jpqqa")

[node name="Collision" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_5fj38")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_megq1")
}
autoplay = "Stand"

[node name="Skeleton" type="Skeleton2D" parent="."]

[node name="Wand" type="Bone2D" parent="Skeleton"]
position = Vector2(42, -11)
rotation = -1.5708
rest = Transform2D(-3.61999e-06, -1, 1, -3.61999e-06, 42, -11)

[node name="Texture" type="Sprite2D" parent="Skeleton/Wand"]
texture_filter = 1
position = Vector2(17, -3.8743e-07)
rotation = 0.785398
scale = Vector2(5, 5)
texture = ExtResource("2_5gsqr")

[node name="WandEffectSummon" type="CPUParticles2D" parent="Skeleton/Wand"]
position = Vector2(36, -0.999996)
rotation = 1.5708
emitting = false
amount = 12
one_shot = true
preprocess = 0.8
explosiveness = 0.2
direction = Vector2(0, -1)
spread = 4.0
gravity = Vector2(0, 0)
initial_velocity_min = 400.0
initial_velocity_max = 400.0
scale_amount_min = 5.0
scale_amount_max = 5.0
color = Color(0.698039, 0, 0.968627, 1)

[node name="WandEffectKill" type="CPUParticles2D" parent="Skeleton/Wand"]
position = Vector2(36, -1)
rotation = 1.5708
emitting = false
amount = 12
one_shot = true
preprocess = 0.8
explosiveness = 0.2
direction = Vector2(0, -1)
spread = 4.0
gravity = Vector2(0, 0)
initial_velocity_min = 400.0
initial_velocity_max = 400.0
scale_amount_min = 5.0
scale_amount_max = 5.0
color = Color(1, 0.439216, 0, 1)

[node name="Bone2D" type="Bone2D" parent="Skeleton/Wand"]
rest = Transform2D(1, 0, 0, 1, 0, 0)
auto_calculate_length_and_angle = false
length = 16.0
bone_angle = 0.0

[node name="ArmRight" type="Bone2D" parent="Skeleton"]
position = Vector2(45, 5)
rest = Transform2D(1, 0, 0, 1, 45, 5)

[node name="Texture" type="Sprite2D" parent="Skeleton/ArmRight"]
texture_filter = 1
position = Vector2(-20, 0)
scale = Vector2(5, 5)
texture = ExtResource("1_s27gf")

[node name="Bone2D" type="Bone2D" parent="Skeleton/ArmRight"]
rest = Transform2D(1, 0, 0, 1, 0, 0)
auto_calculate_length_and_angle = false
length = 16.0
bone_angle = 0.0

[node name="ArmLeft" type="Bone2D" parent="Skeleton"]
position = Vector2(-45, 0)
rest = Transform2D(1, 0, 0, 1, -45, 0)

[node name="Texture" type="Sprite2D" parent="Skeleton/ArmLeft"]
texture_filter = 1
position = Vector2(20, 5)
scale = Vector2(5, 5)
texture = ExtResource("1_s27gf")
flip_h = true

[node name="Bone2D" type="Bone2D" parent="Skeleton/ArmLeft"]
rest = Transform2D(1, 0, 0, 1, 0, 0)
auto_calculate_length_and_angle = false
length = 16.0
bone_angle = 0.0

[node name="Head" type="Bone2D" parent="Skeleton"]
rest = Transform2D(1, 0, 0, 1, 0, 0)

[node name="Texture" type="Sprite2D" parent="Skeleton/Head"]
texture_filter = 1
scale = Vector2(5, 5)
texture = ExtResource("1_3advf")

[node name="Bone2D" type="Bone2D" parent="Skeleton/Head"]
rest = Transform2D(1, 0, 0, 1, 0, 0)
auto_calculate_length_and_angle = false
length = 16.0
bone_angle = 0.0

[node name="UndeadDetect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="UndeadDetect"]
shape = SubResource("CircleShape2D_47lbi")

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AudioListener2D" type="AudioListener2D" parent="."]

[node name="Spawn" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_8r7e4")
volume_db = -4.0

[node name="BoostTimer" type="Timer" parent="."]
one_shot = true

[connection signal="finished" from="Skeleton/Wand/WandEffectSummon" to="." method="_on_wand_effect_summon_finished"]
[connection signal="finished" from="Skeleton/Wand/WandEffectKill" to="." method="_on_wand_effect_kill_finished"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="BoostTimer" to="." method="_on_boost_timer_timeout"]
